fixed z-index issue with facebook button

--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,11 @@ body > #page {
 /* ====================
     INTERMEDIATE: Menu
    ==================== */
-
+	
+	#header_container {
+		z-index:1;
+	}
+	
     .main {
   		
   	}
